--- a/assets/css/ancss.css
+++ b/assets/css/ancss.css
@@ -47,8 +47,13 @@ h1 {
     margin-bottom: 20px;
     border-radius: 30px;
     font-size: 1.5em;
-    box-shadow: 0 2px 10px rgb(255, 255, 255);
-    border: 2px solid #efb300;
+    box-shadow: 0 2px 15px rgb(255, 255, 255);
+    border: 5px solid #efb300;
+    transition: transform 0.6s ease, box-shadow 0.6s ease;
+}
+
+h1:hover {
+    transform: scale(1.1);
 }
 
 table {
@@ -68,6 +73,18 @@ th, td {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    transition: transform 0.6s ease, box-shadow 0.6s ease;
+    animation: fadeIn 1.5s ease-in-out forwards;
+}
+
+th {
+    border: 5px solid #ffc800;
+}
+
+td:hover {
+    background: color-mix(in srgb, rgba(144, 87, 201, 0.8), black 20%);
+    color: #ffbf00;
+    box-shadow: 0 2px 15px rgb(255, 255, 255);
 }
 
 th:first-child, td:first-child { 
@@ -96,13 +113,19 @@ button:hover {
     background-color: color-mix(in srgb, rgba(144, 87, 201, 0.8), black 20%);
     transform: scale(1.1);
     border: 2px solid #efb300;
-    box-shadow: 0 2px 10px rgb(255, 255, 255);
+    box-shadow: 0 2px 15px rgb(255, 255, 255);
 }
 
-.button-container {
+.button-container-right {
     position: absolute;
     bottom: 10px;
     right: 10px;
+}
+
+.button-container-left {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
 }
 
 .button-link {
@@ -122,12 +145,9 @@ button:hover {
     background-color: color-mix(in srgb, rgba(144, 87, 201, 0.8), black 20%);
     transform: scale(1.1);
     border: 2px solid #efb300;
-    box-shadow: 0 2px 10px rgb(255, 255, 255);
+    box-shadow: 0 2px 15px rgb(255, 255, 255);
 }
 
-
-
-/* Responsive Styles */
 @media (max-width: 768px) {
     .list-box {
         width: 90%;
@@ -169,12 +189,16 @@ button:hover {
         width: calc((100% - 40px) / 2); 
     }
 
-    .button-container {
-        align-items: center;
-        position: relative;
-        bottom: 0;
-        right: 0;
-        margin-top: 10px;
+    .button-container-left,
+    .button-container-right {
+        position: static;
+        width: 100%;
+        text-align: center;
+        margin-top: 15px;
+    }
 
+    .button-link {
+        width: 50%; 
+        padding: 10px;
     }
 }
